# Team-Project

./: Animation.cpp  Animation.h  CMakeLists.txt  Chest.cpp  Chest.h  Coin.cpp  Coin.h  Enemies.cpp  Enemies.h  Engine.cpp  Engine.h  Levels.cpp  Levels.h  Player.cpp  Player.h  Potion.cpp  Potion.h  README.md  main.cpp
Assets/: Credits for Assets.txt
Assets/Assets for Team Project/: chest sheet.xcf  heart.xcf  platform.xcf  player character sheet.xcf  slime sheet.xcf
Assets/Assets for Team Project/enemies/: 32 x 32 flying bat_fly_0.xcf  32x32 slime design 3rd_Animation 1_0.xcf
Assets/Assets for Team Project/enviroment sprites/: 32 X 32 dungeon tilemap_jar_0.xcf  jewel sheet.xcf
Assets/Assets for Team Project/sounds/: desktop.ini
Assets/Assets for Team Project/tileset/: cyberpunk-street.tsx  industrial.v2.tsx  scifi_sidescroller_tiles.tsx  trialmap.tmx
cmake_modules/: FindSFML.cmake
