cmake_minimum_required(VERSION 3.9)
project(TeamProject)

set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp Levels.h Player.h Engine.cpp Engine.h Levels.cpp Player.cpp Enemies.cpp Enemies.h Animation.cpp Animation.h Coin.h Coin.cpp)
add_executable(TeamProject ${SOURCE_FILES})
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
find_package(SFML REQUIRED system window graphics network audio)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(TeamProject ${SFML_LIBRARIES})
endif()